Dec 17, 2001: Jordi Mallach <jordi@sindominio.net>
- configure.in: remove debian/Makefile creation, too.
- Attempt to fix Gamespy pixmap.
- Updated NEWS for 0.9.8.

Dec 16, 2001: Jordi Mallach <jordi@sindominio.net>
- Makefile.am: remove debian from SUBDIRS. What a pain in the ass!
  The whole directory should be removed, but this is the bare minimum.

Dec 16, 2001: Jordi Mallach <jordi@sindominio.net>
- Updated Spanish translation.

Dec 15, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- server filters were broken, fixed
- new Tribes2 icon
- updated TODO
- updated german translation

Dec 15, 2001: Alex Burger <alex@fragit_dot_net>
- Added Edit / Add Default Masters command.  Adds in all the default
  master servers in case you accidentally deleted one (or all)

Dec 13, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- qstat no longer required at build time

Dec 09, 2001: Jordi Mallach <jordi@sindominio.net>
- Added past release dates to NEWS.

Dec 09, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- Updated NEWS and BUGS

Dec 07, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- Patch by Ben Winslow to create OS/CPU statistics for RTCW, Kingpin and
  Half-Life

Dec 06, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- added rtcw gametypes
- changed master protocol for rtcw to 57
- added a missing gettext call

Nov 22, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- the ppc problem turned out to be a bug in filter.c, special thanks to Philipp
  Thomas for finding it!
- other changes by Philipp Thomas to get rid of some compiler warnings
- updated german translation

Nov 21, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- fixed the ppc fix (hopefully ;)

Nov 21, 2001: Jordi Mallach <jordi@sindominio.net>
- NEWS updates for 0.9.7

Nov 21, 2001: Jordi Mallach <jordi@sindominio.net>
- es.po updates

Nov 21, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- updated TODO

Nov 19, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- workaround for ppc compiler bug
