@@ -1,3 +1,6 @@
+Dec 21, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
+- added gametypes and dmflags for q3a mod generations
+
 Dec 17, 2001: Jordi Mallach <jordi@sindominio.net>
 - configure.in: remove debian/Makefile creation, too.
 - Attempt to fix Gamespy pixmap.
